# Outcome

./: AUTH_SETUP.md  fix_db.py  package-lock.json  railway.toml  real_agent.py  rename.py
.github/workflows/: publish-sdks.yml
landing/: index.html  privacy.html  terms.html  vercel.json
layer5/: .env.example  .gitignore  DEPLOY.md  PRODUCTION_CHECKLIST.md  PROJECT_REPORT.md  README.md  Test.java  db-update.js  e2e-verify.js  implementation_plan.md.resolved  package-lock.json  package.json  railway.toml  run_debug.py  run_migrations.py  run_tests.py  task.md.resolved
layer5/.github/workflows/: publish-npm-sdk.yml  publish-python-sdk.yml  publish-sdks.yml
layer5/api/: .gitignore  PRODUCTION_CHECKLIST.md  fix_log_outcome.cjs  index.ts  out.txt  package-lock.json  package.json  tsconfig.json  vitest.config.json
layer5/api/lib/: context-embed.ts  decision-writer.ts  drift-detector.ts  ips-engine.ts  outcome-orchestrator.ts  policy-engine.ts  reward-backprop.ts  sanitize.ts  scoring.ts  sequence-tracker.ts  supabase.ts  tenant-supabase.ts
layer5/api/middleware/: admin-auth.ts  auth.ts  rate-limit.ts  user-auth.ts  validate-action.ts
layer5/api/migrations/: 063_fix_trust_audit_constraint_and_sequence_fk.sql  064_rewrite_mv_episode_patterns_from_action_sequences.sql  065_drop_event_type_constraint_add_schema_invariants.sql  066_seed_institutional_knowledge.sql  067_add_signal_columns_to_fact_outcomes.sql  068_create_dim_pending_signal_registrations.sql  069_create_signal_contracts.sql  070_create_dim_discrepancy_log.sql  073_tenant_merge_insert_copy.sql  074_mv_tap_ml_score_fix.sql  075_fix_mv_tap_null_agent_scope.sql  076_fix_mv_tap_uuid_sentinel.sql
layer5/api/routes/: audit.ts  contracts.ts  discrepancy.ts  get-patterns.ts  get-recommendations.ts  get-scores.ts  log-outcome.ts  outcome-feedback.ts  pending-signals.ts  simulate.ts  webhook.ts
layer5/api/tests/: auth.test.ts  context-drift.test.ts  discrepancy.test.ts  ips-variance.test.ts  log-outcome-sanitize.test.ts  reward-backprop.test.ts  sanitize.test.ts  verifier.test.ts
layer5/api/types/: hono.d.ts
layer5/dashboard/: REALTIME_SETUP.md  debug_queries.mjs  index.html  package-lock.json  package.json  tsconfig.json
layer5/dashboard/src/: index.css  main.tsx  supabaseClient.ts
layer5/db/migrations/: 029_rehash_api_keys.sql  030_rate_limit_store.sql
layer5/scripts/: check-edge-functions.js  check-indexes.js  check-migrations.js  check-schema.js  check-trust.js  deploy-007.js  deploy.js  full-audit-live.js  full-audit.js  health-check.js  migrate.js  run-migrations.js  setup-monitoring.md  test-connection.js  verify-backup-status.js  verify-pgcron.sql
layer5/sdk/: package-lock.json  package.json  tsconfig.json
layer5/sdk-python/: pyproject.toml
layer5/sdk-python/layerinfinite_l5/: __init__.py  instrument.py
layer5/sdk-python/layerinfinite_l5/tracing/: __init__.py  traced_primitive.py  traced_response.py
layer5/sdk-python/tests/: test_phase6.py
layer5/sdk/src/: client.ts  instrument.ts  interceptor.ts
layer5/sdk/tests/: phase5.test.ts
layer5/sdks/: smoke-test.js
layer5/sdks/python/: CHANGELOG.md  Makefile  README.md  pyproject.toml
layer5/sdks/python/layer5/: __init__.py  client.py  exceptions.py  models.py
layer5/sdks/python/layerinfinite/: __init__.py  client.py  exceptions.py  instrument.py  models.py
layer5/sdks/python/layerinfinite/pipeline/: outcome_pipeline.py
layer5/sdks/python/layerinfinite/tracing/: causal_graph.py  execution_context.py  interceptor.py
layer5/sdks/python/tests/: test_client.py
layer5/sdks/typescript/: CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  tsconfig.json
layer5/supabase/: config.toml
layer5/supabase/migrations/: 001_create_dimensions.sql  002_create_fact_outcomes.sql  003_create_episodes.sql  004_create_materialized_views.sql  005_create_indexes.sql  006_create_rls_policies.sql  007_create_trust_scores.sql  (+60 more)
layer5/tests/: tsconfig.json
layer5/training/: DEPLOY.md  Dockerfile  README.md  cloudrun-job.yaml  counterfactual_retraining.py  export_model.py  features.py  requirements.txt  train_world_model.py  validate_model.py
sdks/no-code/: README.md
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/layer5/: __init__.py  _version.py  async_client.py  client.py  exceptions.py  models.py  retry.py
sdks/python/layer5/integrations/: __init__.py  autogen.py  crewai.py  decorator.py  langchain.py  llamaindex.py  openai.py
sdks/python/tests/: conftest.py  test_async_client.py  test_autogen.py  test_client.py  test_crewai.py  test_decorator.py  test_langchain.py  test_llamaindex.py  test_models.py  test_openai_integration.py  test_retry.py  test_simulate.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
test-install-npm/: package-lock.json  package.json
(+156 files in other folders)
