[project]
name = "layer5-sdk"
version = "0.1.0"
description = "Decision intelligence layer for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Layer5", email = "sdk@layer5.ai" }]
keywords = ["ai", "agents", "decision-intelligence", "llm", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage = "https://layer5.ai"
Repository = "https://github.com/hari08varma/Outcome"
Documentation = "https://docs.layer5.ai"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["layer5*"]
