[project]
name = "layerinfinite-sdk"
version = "0.1.6"
description = "Decision intelligence layer for AI agents — Layerinfinite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Layerinfinite", email = "sdk@layerinfinite.ai" }]
keywords = ["ai", "agents", "decision-intelligence", "llm", "layerinfinite", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-httpx>=0.30,<0.32",
    "httpx>=0.27.0,<0.28.0",
]

[project.urls]
Homepage = "https://layerinfinite.ai"
Repository = "https://github.com/hari08varma/Outcome"
Documentation = "https://docs.layerinfinite.ai"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["layerinfinite*"]
